...
            "state" : "translated",
            "value" : "Os dígitos devem ser 6 ou 8"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Listo"
          }
...
            "state" : "translated",
            "value" : "ex. voce@exemplo.com"
          }
        }
      }
    },
    "Edit token" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Editar token"
          }
...
            "state" : "translated",
            "value" : "Criptografando…"
          }
        }
      }
    },
    "Enter a website like example.com" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Introduce un sitio web como example.com"
          }
...
            "state" : "translated",
            "value" : "Inserir a chave secreta"
          }
        }
      }
    },
    "example.com" : {

    },
    "Export" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "Keya Authenticator é gratuito e open-source, sem anúncios, sem rastreamento e sem assinatura. Se ele traz tranquilidade para você, uma pequena gorjeta significa muito."
          }
        }
      }
    },
    "Keya suggests this code in AutoFill on this website." : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keya sugiere este código en Autorrelleno en este sitio web."
          }
...
            "state" : "translated",
            "value" : "Desativado"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
            "state" : "translated",
            "value" : "Alguns tokens ignorados"
          }
        }
      }
    },
    "Something Went Wrong" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Algo salió mal"
          }
...
